.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Candidate_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Branch_Name__c</fullName>
    <formula>b3o__Contact__r.Branch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Branch Name</label>
    <type>Text</type>
</CustomField>