.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Candidate_Classification__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Classification__c</fullName>
    <formula>TEXT( b3o__Contact__r.Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Classification</label>
    <type>Text</type>
</CustomField>