.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <formula>TEXT( b3o__Contact__r.TR1__Candidate_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Status</label>
    <type>Text</type>
</CustomField>