.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Candidates_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Name__c</fullName>
    <formula>b3o__Contact__r.FirstName + &quot; &quot; +  b3o__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidates Name</label>
    <type>Text</type>
</CustomField>