.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <formula>b3o__Document__r.Name</formula>
    <label>Certificate Name</label>
    <type>Text</type>
</CustomField>