.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate Type</label>
    <referenceTo>b3o__Certificate_Type__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>