.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Certificate_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type_ID__c</fullName>
    <formula>CASESAFEID(b3o__Document__r.Certificate_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Type ID</label>
    <type>Text</type>
</CustomField>