.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Document_approval_required__c.field-meta.xml
<CustomField>
    <fullName>Document_approval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document approval required</label>
    <type>Checkbox</type>
</CustomField>