.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <formula>b3o__Document__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Name</label>
    <type>Text</type>
</CustomField>