.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Document_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Request_Date__c</fullName>
    <formula>b3o__Document_Assignment__r.Document_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Request Date</label>
    <type>DateTime</type>
</CustomField>