.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Number_of_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Certificates__c</fullName>
    <label>Number of Certificates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>