.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>