.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document Expired</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
            <value>
                <fullName>Document Unclear</fullName>
            </value>
            <value>
                <fullName>Document Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>