.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Submission__c/fields/Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Request_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Sent</label>
    <type>Checkbox</type>
</CustomField>